--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: emacs-lisp
-before_install:
-  - curl -fsSkL https://gist.github.com/rejeep/7736123/raw | sh
-  - export PATH="/home/travis/.cask/bin:$PATH"
-  - export PATH="/home/travis/.evm/bin:$PATH"
-  - evm install $EVM_EMACS --skip --use
-  - cask
+sudo: no
 env:
-  - EVM_EMACS=emacs-24.3-bin
-  - EVM_EMACS=emacs-24.4-bin
+  - EVM_EMACS=emacs-24.1-travis
+  - EVM_EMACS=emacs-24.2-travis
+  - EVM_EMACS=emacs-24.3-travis
+  - EVM_EMACS=emacs-24.4-travis
+  - EVM_EMACS=emacs-24.5-travis
+install:
+  - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw >
+travis.sh && source ./travis.sh
+  - evm install $EVM_EMACS --use --skip
+  - cask
 script:
   - emacs --version
   - make
