--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: generic
 sudo: no
 env:
-  - EVM_EMACS=emacs-24.1-travis
-  - EVM_EMACS=emacs-24.2-travis
-  - EVM_EMACS=emacs-24.3-travis
-  - EVM_EMACS=emacs-24.4-travis
+#  - EVM_EMACS=emacs-24.1-travis
+#  - EVM_EMACS=emacs-24.2-travis
+#  - EVM_EMACS=emacs-24.3-travis
+#  - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
 install:
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
