--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ env:
 install:
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
   - evm install $EVM_EMACS --use --skip
+  ## delete all the el files
+  - find /tmp -name "*el$" -exec rm {} \;
   - cask
 script:
   - emacs --version
