--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
   ##  - evm install $EVM_EMACS --use --skip
   ## delete all the el files
-  - find /tmp -name "*el" -print -exec rm {} \;
+  - find /tmp -name "*el" | sed 's/.$//' | xargs rm
   - cask
 script:
   - emacs --version
