--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - EVM_EMACS=emacs-24.5-travis
 install:
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
-  ##  - evm install $EVM_EMACS --use --skip
+  - evm install $EVM_EMACS --use --skip
   ## delete all the el files
   - find /tmp -name "*elc" | sed 's/.$//' | xargs rm
   - cask
