--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ install:
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
   - evm install $EVM_EMACS --use --skip
   ## delete all the el files
-  - find /tmp -name "*el"
-  - find /tmp -name "*elc"
-  ## - find /tmp -name "*elc" | sed 's/.$//' | xargs rm -f
+  ## - find /tmp -name "*el"
+  ## - find /tmp -name "*elc"
+  - find /tmp -name "*elc" | sed 's/.$//' | xargs rm -f
   - cask
 script:
   - emacs --version
