--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,12 @@ env:
 #  - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
 install:
-  - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
+  - export PATH="/home/travis/.evm/bin:$PATH"
+  - export PATH="/home/travis/.cask/bin:$PATH"
+  - git clone -b copy-with-preserve-option https://github.com/rejeep/evm.git /home/travis/.evm
+  - evm config path /tmp
+  - evm install emacs-24.3-travis --use --skip
+  - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
   - evm install $EVM_EMACS --use --skip
   ## delete all the el files
   ## - find /tmp -name "*el"
