--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: generic
 sudo: no
 env:
-#  - EVM_EMACS=emacs-24.1-travis
-#  - EVM_EMACS=emacs-24.2-travis
-#  - EVM_EMACS=emacs-24.3-travis
-#  - EVM_EMACS=emacs-24.4-travis
+  - EVM_EMACS=emacs-24.1-travis
+  - EVM_EMACS=emacs-24.2-travis
+  - EVM_EMACS=emacs-24.3-travis
+  - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
 install:
   - export PATH="/home/travis/.evm/bin:$PATH"
