Really add all versions back

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   - EVM_EMACS=emacs-24.3-travis
   - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
+  - EVM_EMACS=emacs-git-snapshot-travis
 install:
   - export PATH="/home/travis/.evm/bin:$PATH"
   - export PATH="/home/travis/.cask/bin:$PATH"
