--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 install:
   - export PATH="/home/travis/.evm/bin:$PATH"
   - export PATH="/home/travis/.cask/bin:$PATH"
-  - git clone -b copy-with-preserve-option https://github.com/rejeep/evm.git /home/travis/.evm
+  - git clone https://github.com/rejeep/evm.git /home/travis/.evm
   - evm config path /tmp
   - evm install emacs-24.3-travis --use --skip
   - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
